# linutil

./: .gitignore  Cargo.toml  DATA_FLOW_DOCUMENTATION.md  run-desktop.sh
egui-desktop/: Cargo.toml
egui-desktop/src/: main.rs
linutil-desktop/: Cargo.toml  INTEGRATION_SUMMARY.md  tauri.conf.json  test_integration.sh  test_ui.sh
linutil-desktop/src/: cli.rs  config.rs  core_integration.rs  main.rs  theme.rs  utils.rs
