[package]
name = "linutil-egui"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eframe = { version = "0.29", default-features = true, features = ["default_fonts"] }
egui = "0.29"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
linutil_core = { path = "../core" }