[package]
name = "linutil-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linutil_core = { path = "../core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]